tests/test_files/invalid/syntax/task_misspelled_constraints.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Task helloWorld
    Contraints {"TransportStart" : "45 14 * * *", "TransportFinished" : "4514 * * *"}
End
